# vendor_telink

./: NOTICE.md  OAT.xml  README.en.md  README.md  README_zh.md
b91_devkit_ble_demo/: BUILD.gn  config.json
b91_devkit_ble_demo/b91_gatt_sample/: BUILD.gn  app.c  app_att.c  ble_sample_main.c  uni_ble.c  uni_ble.h
b91_devkit_ble_demo/hdf_config/: hdf.hcs
b91_devkit_led_demo/: BUILD.gn  config.json
b91_devkit_led_demo/hals/utils/sys_param/: hal_sys_param.c
b91_devkit_led_demo/hals/utils/token/: hal_token.c
b91_devkit_led_demo/led_demo/: BUILD.gn  app.c
b91_devkit_xts_demo/: BUILD.gn  config.json
b91_devkit_xts_demo/hals/utils/sys_param/: hal_sys_param.c
ble_demo/: BUILD.gn  config.json  ohos.build
ble_demo/b91_gatt_sample/: BUILD.gn  app.c  app.h  app_att.c  app_att.h  ble_sample_main.c  uni_ble.c
ble_demo/hals/utils/sys_param/: BUILD.gn  vendor.para
ble_demo/hdf_config/: BUILD.gn
led_demo/: BUILD.gn  config.json  ohos.build
led_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
led_demo/hals/utils/token/: BUILD.gn
led_demo/led_demo/: BUILD.gn  app.c
mbedtls_demo/: BUILD.gn  config.json  ohos.build
mbedtls_demo/hals/utils/sys_param/: hal_sys_param.c
mbedtls_demo/hals/utils/token/: hal_token.c
mbedtls_demo/mbedtls_demo/: BUILD.gn  app.c
ota_demo/: BUILD.gn  README.md  config.json  ohos.build
ota_demo/hals/utils/sys_param/: hal_sys_param.c
ota_demo/kernel_configs/: debug.config
ota_demo/ota_demo/: BUILD.gn  app.c  serial.c  serial.h
uart_demo/: BUILD.gn  config.json  ohos.build
uart_demo/hals/utils/token/: BUILD.gn  hal_token.c
uart_demo/uart_demo/: BUILD.gn  app.c
xts_demo/: BUILD.gn  config.json  ohos.build
xts_demo/hals/utils/sys_param/: hal_sys_param.c
xts_demo/hals/utils/token/: BUILD.gn
xts_demo/hdf_config/: hdf.hcs
xts_demo/kernel_configs/: debug.config
